fix: Avoid column width jumps on message index

--- a/_sass/message_index.scss
+++ b/_sass/message_index.scss
@@ -14,6 +14,7 @@ body.layout--message_index {
         }
       }
       td.message {
+        width: 100%;
       }
       td.ob-issue {
         padding-right: 1em;
